--- a/English Chapters/3.1_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.1_MM_Linear_algebra.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 The mathematical minium \n",
+    "# 3 The mathematical minimum \n",
     "\n",
-    "Whilst ths work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum information. Beyond the scope of this course, there are a great many applications of the mathematics covered in this textbook. A much richer understanding of the physical world can be understood by applying these topics to the nature of light, itself quantum fundamentally, as well as machine learning and many fields of engineering. \n",
+    "Whilst this work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum information. Beyond the scope of this course, there are a great many applications of the mathematics covered in this textbook. A much richer understanding of the physical world can be understood by applying these topics to the nature of light, itself quantum fundamentally, as well as machine learning and many fields of engineering. \n",
     "\n",
     "Readers with a more rigorous mathematical background may find this material rather basic but may still appreciate the explanations and relationships between the topics. \n",
     "\n",
@@ -14,7 +14,7 @@
     "\n",
     "## 3.1 Linear Algebra \n",
     "\n",
-    "Like trigonometry, linear algebra underpins most of physics, engineering and computer science. Its importance is difficult to overstate. In 1939, Paul Dirac reformulated quantum mechanics using linear algebra [1]. His contributions to the development of quantum theory are signifcant and the notation used to describe quantum states with vectors is known as Dirac notation ( to be covered more in chapter 4). There are two key elements to linear algebra: vectors and matrices. \n",
+    "Like trigonometry, linear algebra underpins most of physics, engineering and computer science. Its importance is difficult to overstate. In 1939, Paul Dirac reformulated quantum mechanics using linear algebra [1]. His contributions to the development of quantum theory are significant and the notation used to describe quantum states with vectors is known as Dirac notation ( to be covered more in chapter 4). There are two key elements to linear algebra: vectors and matrices. \n",
     "\n",
     "\n",
     "### 3.1.1 Vectors\n",
@@ -60,7 +60,7 @@
     "\n",
     "### 3.1.3 Multiplying a vector by a scalar \n",
     "\n",
-    "Vectors can be made smaller or bigger by enlarging them by some scale factor. To make a vector bigger by some scale factor, the vector is multiplied by a scalar. To scale the vector $\\ket{v}$ by some scalar quantitity, $a$, this would be done by multiplying each componenent of the vector by the scalar factor. \n",
+    "Vectors can be made smaller or bigger by enlarging them by some scale factor. To make a vector bigger by some scale factor, the vector is multiplied by a scalar. To scale the vector $\\ket{v}$ by some scalar quantity, $a$, this would be done by multiplying each component of the vector by the scalar factor. \n",
     "\n",
     "$$\n",
     "a \\ket{v} = a\\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix} = \\begin{bmatrix} a \\times v_0 \\\\ a \\times v_1 \\\\ \\vdots \\\\ a \\times v_{n-1} \\end{bmatrix} \n",
@@ -69,7 +69,7 @@
     "\n",
     "### 3.1.4 The inner product  \n",
     "\n",
-    "It can be very useful to compare two vectors by measuring how alligned they are. Imagine two vectors poiting the same way. These two vectors would have a lot in common, and so would be perfectly alligned. The measure of how similar two vectors are is the inner product  (sometimes called dot product). The inner product  can be calculated by multiplying each component of the vectors and adding them up. \n",
+    "It can be very useful to compare two vectors by measuring how aligned they are. Imagine two vectors pointing the same way. These two vectors would have a lot in common, and so would be perfectly aligned. The measure of how similar two vectors are is the inner product (sometimes called dot product). The inner product can be calculated by multiplying each component of the vectors and adding them up. \n",
     "\n",
     "For example take the vectors $\\bra{a}$ & $\\ket{b}$ as \n",
     "\n",
@@ -77,7 +77,7 @@
     " \\ket{a} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} ;  \\ket{b} = \\begin{bmatrix} 3 \\\\ 1 \\end{bmatrix} \n",
     " $$\n",
     "\n",
-    " The inner product  between them is \n",
+    " The inner product between them is \n",
     "\n",
     " $$\n",
     "\\braket{a|b} = \\begin{bmatrix} 1^* & 2^* \\end{bmatrix}  \\begin{bmatrix} 3 \\\\ 1 \\end{bmatrix}\n",
@@ -94,11 +94,11 @@
     "![Dot_product](Images\\Dot_product_visualisation.png)\n",
     "\n",
     "\n",
-    "The inner product  depends on the angle between the vectors. If the vectors are pointing the same way, it will be bigger, if the vectors are pointing in completley opposite directions, it will be smaller. \n",
+    "The inner product depends on the angle between the vectors. If the vectors are pointing the same way, it will be bigger, if the vectors are pointing in completely opposite directions, it will be smaller. \n",
     "\n",
     "### 3.1.5 Perpendicular vectors \n",
     "\n",
-    "If two vectors have no components in common, their inner product  will be zero. This can be shown by two vectors that have an angle of $90\\degree$ between them.  We call these vectors perpendicular. In quantum mechanics, the preferred term is *orthogonal* which means the same thing, but applies to more than just vectors. \n",
+    "If two vectors have no components in common, their inner product will be zero. This can be shown by two vectors that have an angle of $90\\degree$ between them.  We call these vectors perpendicular. In quantum mechanics, the preferred term is *orthogonal* which means the same thing but applies to more than just vectors. \n",
     "\n",
     "For example the vectors $\\ket{p} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}$ & $\\ket{q} = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}$ have a inner product  of 0. \n",
     "\n",
@@ -118,7 +118,7 @@
     "\n",
     "### 3.2.2 Matrix-vector product \n",
     "\n",
-    "As well as storing information, matrices can be used to transform vectors. This is done using the matirx-vector product. The matrix $M$ acting on the vector $\\ket{a}$ is denoted  as $M\\ket{a}$. The matrix multiplication is done by mutiplying the corresponding elements of $M$ & $\\ket{a}$. Starting from the first row of $M$ we multiply out the elements of $M$ & $\\ket{a}$ starting from the left and add them up. Let's call the transformed vector $\\ket{a'}$. We can compute $\\ket{a'}$ by doing the matrix-vector product of $M$ on $\\ket{a}$ as\n",
+    "As well as storing information, matrices can be used to transform vectors. This is done using the matrix-vector product. The matrix $M$ acting on the vector $\\ket{a}$ is denoted  as $M\\ket{a}$. The matrix multiplication is done by multiplying the corresponding elements of $M$ & $\\ket{a}$. Starting from the first row of $M$ we multiply out the elements of $M$ & $\\ket{a}$ starting from the left and add them up. Let's call the transformed vector $\\ket{a'}$. We can compute $\\ket{a'}$ by doing the matrix-vector product of $M$ on $\\ket{a}$ as\n",
     "\n",
     "\n",
     "$$\n",
@@ -153,12 +153,12 @@
     "\n",
     "- Vectors are a collection of numbers stored in a row or column\n",
     "- Vectors can be added to each other or multiplied by a scalar\n",
-    "- The inner product of two vectors tells us how alligned they are\n",
+    "- The inner product of two vectors tells us how aligned they are\n",
     "- Perpendicular (orthogonal) vectors have an inner product of 0\n",
     "- Matrices are arrays of numbers that can act on vectors \n",
     "- Applying a matrix to a vector turns the vector into another vector\n",
     "- Matrices can have an inverse which does the reverse of the matrix \n",
-    "- Unitary matrices have an inverse equal to their complex transpose"
+    "- Unitary matrices have an inverse equal to their complex transpose\n"
    ]
   }
  ],
