Fixed tiny spelling mistake

--- a/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.2_MM_Trigonometry_Complex.ipynb
@@ -33,9 +33,9 @@
     "\n",
     "### 3.4.1 The square root of -1 \n",
     "\n",
-    "There are two square roots of $4$: $+2$ & $-2$. For numbers that aren't integers there are algorithms we can run on our calculators to work out the roots to arbitrary precision. In physics there are many situtations in which the only valid solution to a particular equation calls for the square root of a negative number. To make this work, it is necessary to first define the square root of $-1$ as $i = \\sqrt{-1}$. \n",
+    "There are two square roots of $4$: $+2$ & $-2$. For numbers that aren't integers there are algorithms we can run on our calculators to work out the roots to arbitrary precision. In physics there are many situations in which the only valid solution to a particular equation calls for the square root of a negative number. To make this work, it is necessary to first define the square root of $-1$ as $i = \\sqrt{-1}$. \n",
     "\n",
-    "Using some basic algebra we can factorise any surd (square root number) into a product of two surds $ \\sqrt{ab} = \\sqrt{a} \\times \\sqrt{b}$. This holds true for negative numbers allowing us to take the square root of any negative number by breaking it down into the square root of $-1$ and the postive magnitude of that number. This can be written as:\n",
+    "Using some basic algebra we can factorise any surd (square root number) into a product of two surds $ \\sqrt{ab} = \\sqrt{a} \\times \\sqrt{b}$. This holds true for negative numbers allowing us to take the square root of any negative number by breaking it down into the square root of $-1$ and the positive magnitude of that number. This can be written as:\n",
     "\n",
     "$$ \\sqrt{-a} = \\sqrt{-1} \\times \\sqrt{a} $$\n",
     "\n",
@@ -69,7 +69,7 @@
     "\n",
     "$z^* = x - iy$ \n",
     "\n",
-    "In the figure below the complex number $z$ is shown along with its complex conjuagte. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
+    "In the figure below the complex number $z$ is shown along with its complex conjugate. In this diagram $\\bar{z}$ is used rather than $z^*$ but it means the same thing.  \n",
     "\n",
     "![Complex_conjugate](Images\\Complex_conjugate_picture.svg.png)\n",
     " [3]\n",
@@ -96,7 +96,7 @@
     "\n",
     "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
     "\n",
-    "The significance of this is that one can represent any complex number in this fasion simply by multiplying the left hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n"
+    "The significance of this is that one can represent any complex number in this fashion simply by multiplying the left-hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "\n",
     "Quantum computing is inherently a method of manipulating probabilities in a very particular way. \n",
     "\n",
-    "## Chapter 3.1 Summary \n",
+    "## Chapter 3.2 Summary \n",
     "\n",
     "- Any point on the unit circle can be described by \n",
     "- Imaginary numbers are a multiple of \\sqrt{-1}\n",
