Changed order of the complex number/LinAlg

--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "Quantum mechanics is described by the Schrödinger equation that is built on space and time. Quantum physics has some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant quirks of quantum mechanics that allow for the development of new technologies. \n",
     "\n",
-    "$*$ Below about 10^-35 m, the Planck length, even quantum mechanics fails to provide a complete description of physics and so describing what would be observed at such a scale is beyond what physics can say for now. \n",
+    "$^*$ Below about $10^{-35}$ m, the Planck length, even quantum mechanics fails to provide a complete description of physics and so describing what would be observed at such a scale is beyond what physics can say for now. \n",
     "\n",
     "\n",
     "### 1.2 How many physicists does it take to change a lightbulb?\n",
