--- a/English Chapters/3.1_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.1_MM_Trigonometry_Complex.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 3.4 Trigonometry \n",
     "\n",
-    "Trigonometry is defined as \"*the branch of mathematics dealing with the relations of the sides and angles of triangles and with the relevant functions of any angles*\" but for our use it is much better to consider trigonometry the study of rotations. \n",
+    "Trigonometry is defined as \"*the branch of mathematics dealing with the relations of the sides and angles of triangles and with the relevant functions of any angles*\" but for our use it is much better to consider trigonometry the study of rotations. In later chapters, quantum gates will be described as rotations. \n",
     "\n",
     "Mathematically, a triangle can be made to any size but for quantum information only triangles with the longest side (the hypotenuse) equal to 1 need to be considered. All the triangles that satisfy this requirement can be drawn within a circle of radius 1 as shown below: \n",
     "\n",
@@ -57,6 +57,8 @@
     "\n",
     "![Argand_plane](Images\\A_plus_bi.svg)\n",
     "\n",
+    "If a were negative, the real part would be negative so the arrow would point to the left instead. \n",
+    "\n",
     "\n",
     "### 3.4.4 Complex conjugate\n",
     "\n",
@@ -96,7 +98,22 @@
     "\n",
     "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
     "\n",
-    "The significance of this is that one can represent any complex number in this fashion simply by multiplying the left-hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n"
+    "The significance of this is that one can represent any complex number in this fashion simply by multiplying the left-hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
+    "\n",
+    "\n",
+    "### 3.4.6 Polar form of complex numbers \n",
+    "\n",
+    "\n",
+    "We can represent any complex number on the Argand diagram in terms of its real and imaginary parts. From trigonometry, we can also represent any point on a circle using an angle and a given radius. \n",
+    "\n",
+    "Euler's formula allows us to put these two together, representing any complex number as a point on a circle. \n",
+    "\n",
+    "Using Euler's formula, any complex number can be written in terms of its magnitude and an angle. This gives us \n",
+    "\n",
+    "$$z = x + iy = re^{i\\theta}$$ \n",
+    "\n",
+    "\n",
+    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane\n"
    ]
   },
   {
@@ -114,10 +131,10 @@
     "## Chapter 3.2 Summary \n",
     "\n",
     "- Any point on the unit circle can be described by \n",
-    "- Imaginary numbers are a multiple of \\sqrt{-1}\n",
+    "- Imaginary numbers are a multiple of $\\sqrt{-1} = i $\n",
     "- Complex numbers have a real and imaginary part \n",
     "- Every complex number has a complex conjugate which has the negative imaginary part\n",
-    "- the magnitude of a complex number is the Euclidean norm of its real and imaginary components\n",
+    "- The magnitude of a complex number is the Euclidean norm of its real and imaginary components\n",
     "- Euler's formula relates complex numbers to trigonometric functions "
    ]
   },
