--- a/English Chapters/3.2_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.2_MM_Linear_algebra.ipynb
@@ -66,18 +66,36 @@
     "a \\ket{v} = a\\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix} = \\begin{bmatrix} a \\times v_0 \\\\ a \\times v_1 \\\\ \\vdots \\\\ a \\times v_{n-1} \\end{bmatrix} \n",
     "$$\n",
     "\n",
+    "### Exercise 3.1 \n",
+    "\n",
+    "Imagine the vector $\\ket{v}$ given by \n",
+    "\n",
+    "$$\n",
+    "\\ket{v} = \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "i. What is the $0^{th}$ component of $\\ket{v}$ ? What about the $1^{st}$ component?\n",
+    "\n",
+    "ii. Write $\\ket{v}$ in the form \n",
+    "\n",
+    "$$\n",
+    "\\ket{v} = a\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} + b \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "iii. Write down the vector $5\\ket{v}$ and describe what has changed to the vector\n",
+    "\n",
     "\n",
     "### 3.1.4 The inner product  \n",
     "\n",
-    "It can be very useful to compare two vectors by measuring how aligned they are. Imagine two vectors pointing the same way. These two vectors would have a lot in common, and so would be perfectly aligned. The measure of how similar two vectors are is the inner product (sometimes called dot product). The inner product can be calculated by multiplying each component of the vectors and adding them up. \n",
+    "It can be very useful to compare two vectors by measuring how aligned they are. Imagine two vectors pointing the same way. These two vectors would have a lot in common, and so would be perfectly aligned. The measure of how similar two vectors are is the inner product. The inner product can be calculated by multiplying each component of the vectors and adding them up. \n",
     "\n",
-    "For example take the vectors $\\bra{a}$ & $\\ket{b}$ as \n",
+    "For example take the vectors $\\ket{a}$ & $\\ket{b}$ as \n",
     "\n",
     " $$\n",
     " \\ket{a} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} ;  \\ket{b} = \\begin{bmatrix} 3 \\\\ 1 \\end{bmatrix} \n",
     " $$\n",
     "\n",
-    " The inner product between them is \n",
+    " The inner product between them is $\\braket{a|b}$. This can be computed by taking the column vector $\\ket{a}$ and turning it into a row vector where every element of $\\ket{a}$ has taken the complex conjugate. \n",
     "\n",
     " $$\n",
     "\\braket{a|b} = \\begin{bmatrix} 1^* & 2^* \\end{bmatrix}  \\begin{bmatrix} 3 \\\\ 1 \\end{bmatrix}\n",
@@ -106,6 +124,24 @@
     "\n",
     "\n",
     "\n",
+    "### Exercise 3.2 \n",
+    "\n",
+    "Let the vector $\\ket{q}$ be given as \n",
+    "\n",
+    "$$ \\ket{q} = \\frac{1}{4} \\begin{bmatrix} -3 \\\\ 4 \\end{bmatrix} $$\n",
+    "\n",
+    "i. Using $\\ket{v}$ from the last exercise, compute \n",
+    "\n",
+    "$$ \\ket{y} = \\ket{v} + \\ket{q} $$\n",
+    "\n",
+    "ii. Compute the inner product $ \\braket{q | v} $\n",
+    "\n",
+    "iii. Compute the inner product $ \\braket{v | q} $ \n",
+    "\n",
+    "iv. Compare your answers for ii. & iii. Explain any differences, if any, or why there is no difference. Does this hold for all pairs of vectors?\n",
+    "\n",
+    "v. Using the result from either ii. or iii. are the vectors $\\ket{v}$ & $\\ket{q}$ perpendicular?\n",
+    "\n",
     "### 3.2.1 Matrices\n",
     "\n",
     "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. All the quantum gates will be represented as matrices, so understanding how they work will be essential for quantum computations. Matrices are usually denoted by capital letters, for example $M$\n",
@@ -125,7 +161,7 @@
     "\\ket{a'} = M\\ket{a}\n",
     "$$\n",
     "\n",
-    "Explicity calculating this gives us: \n",
+    "Explicity calculating this gives us\n",
     "\n",
     "$$\n",
     "\\ket{a'} =  \\begin{bmatrix} 1 & 2  \\\\ 3 & 4 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix}\n",
@@ -141,12 +177,30 @@
     "\n",
     "### 3.2.3 Inverse matrivces\n",
     "\n",
-    "For many matrix-vector products, we can go back and get the original vector from the transformed vector. To get the original vector, we do the matrix-vector product, but with the transformed vector and the inverse of the matrix. \n",
+    "For many matrix-vector products, we can go back and get the original vector from the transformed vector. This means, if we know the transformed vector $\\ket{a'}$ &  the matrix $M$ we can work out the original vector $\\ket{a}$. \n",
+    "\n",
+    "To get the original vector, we do the matrix-vector product, but with the transformed vector and the inverse of the matrix. This gives us \n",
+    "\n",
+    "$$\n",
+    "M^{-1}\\ket{a'} = \\ket{a}\n",
+    "$$\n",
+    "\n",
+    "By using our equation for $\\ket{v'} = M\\ket{a}$ from earlier, this gives us \n",
+    "\n",
+    "$$\n",
+    "M^{-1}M\\ket{a} = \\ket{a}\n",
+    "$$\n",
+    "\n",
+    "Notice how $\\ket{a}$ is completely unchaged from applying $M$ and then $M^{-1}$. The operation $M^{-1}M$ effectively does nothing. The same would be true if we applied $M^{-1}$ first and then $M$ as $MM^{-1}$. The general name for the \"do nothing\" matrix is the identitiy. The identitiy is\n",
+    "\n",
+    "$$M^{-1}M = MM^{-1} = I $$\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "### 3.2.4 Unitary matrices \n",
     "\n",
-    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. \n",
+    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. Conjugate means `\n",
     "\n",
     "\n",
     "### Chapter 3.1 Summary \n",
