--- a/English Chapters/3.2_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.2_MM_Linear_algebra.ipynb
@@ -4,20 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 The mathematical minimum \n",
+    "# 3 Part 2 The mathematical minimum \n",
     "\n",
-    "Whilst this work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum information. Beyond the scope of this course, there are a great many applications of the mathematics covered in this textbook. A much richer understanding of the physical world can be understood by applying these topics to the nature of light, itself quantum fundamentally, as well as machine learning and many fields of engineering. \n",
+    "The second part of chapter 3 will cover linear algebra. Linear algebra is the framework for quantum computing, so it is very important to be familiar with. \n",
     "\n",
-    "Readers with a more rigorous mathematical background may find this material rather basic but may still appreciate the explanations and relationships between the topics. \n",
-    "\n",
-    "\n",
-    "\n",
-    "## 3.1 Linear Algebra \n",
+    "## 3.2 Linear Algebra \n",
     "\n",
     "Like trigonometry, linear algebra underpins most of physics, engineering and computer science. Its importance is difficult to overstate. In 1939, Paul Dirac reformulated quantum mechanics using linear algebra [1]. His contributions to the development of quantum theory are significant and the notation used to describe quantum states with vectors is known as Dirac notation ( to be covered more in chapter 4). There are two key elements to linear algebra: vectors and matrices. \n",
     "\n",
     "\n",
-    "### 3.1.1 Vectors\n",
+    "### 3.2.1 Vectors\n",
     "\n",
     "Vectors are objects that have both direction & magnitude. Velocity is a vector because it has a magnitude, the speed at which the object travels with, and a direction, where it's moving towards. In linear algebra, a vector can be denoted by putting an arrow over a letter as $ \\ket{v} $ .\n",
     "\n",
@@ -43,7 +39,7 @@
     "\n",
     "Where the subscript $v_i$ indicates the i $^{th}$ component of $\\ket{v}$. Note the convention of starting from 0 and ending at $n-1$. This convention of counting from 0 is widely used in QC and conveniently is also used in python too. \n",
     "\n",
-    "### 3.1.2 Adding vectors\n",
+    "### 3.2.2 Adding vectors\n",
     "\n",
     "It can be useful to add vectors. All this requires is adding the corresponding components of each vector. Adding two vectors, $\\ket{a}$ & $\\ket{b}$\n",
     "\n",
@@ -58,7 +54,7 @@
     "\n",
     "This can be useful for expressing a vector in terms of its components. \n",
     "\n",
-    "### 3.1.3 Multiplying a vector by a scalar \n",
+    "### 3.2.3 Multiplying a vector by a scalar \n",
     "\n",
     "Vectors can be made smaller or bigger by enlarging them by some scale factor. To make a vector bigger by some scale factor, the vector is multiplied by a scalar. To scale the vector $\\ket{v}$ by some scalar quantity, $a$, this would be done by multiplying each component of the vector by the scalar factor. \n",
     "\n",
@@ -84,8 +80,7 @@
     "\n",
     "iii. Write down the vector $5\\ket{v}$ and describe what has changed to the vector\n",
     "\n",
-    "\n",
-    "### 3.1.4 The inner product  \n",
+    "### 3.2.4 The inner product  \n",
     "\n",
     "It can be very useful to compare two vectors by measuring how aligned they are. Imagine two vectors pointing the same way. These two vectors would have a lot in common, and so would be perfectly aligned. The measure of how similar two vectors are is the inner product. The inner product can be calculated by multiplying each component of the vectors and adding them up. \n",
     "\n",
@@ -114,7 +109,7 @@
     "\n",
     "The inner product depends on the angle between the vectors. If the vectors are pointing the same way, it will be bigger, if the vectors are pointing in completely opposite directions, it will be smaller. \n",
     "\n",
-    "### 3.1.5 Perpendicular vectors \n",
+    "### 3.2.5 Perpendicular vectors \n",
     "\n",
     "If two vectors have no components in common, their inner product will be zero. This can be shown by two vectors that have an angle of $90\\degree$ between them.  We call these vectors perpendicular. In quantum mechanics, the preferred term is *orthogonal* which means the same thing but applies to more than just vectors. \n",
     "\n",
@@ -138,11 +133,25 @@
     "\n",
     "iii. Compute the inner product $ \\braket{v | q} $ \n",
     "\n",
-    "iv. Compare your answers for ii. & iii. Explain any differences, if any, or why there is no difference. Does this hold for all pairs of vectors?\n",
+    "iv. Bonus question: Compare your answers for ii. & iii. Explain any differences, if any, or why there is no difference. Does this hold for all pairs of vectors?\n",
     "\n",
     "v. Using the result from either ii. or iii. are the vectors $\\ket{v}$ & $\\ket{q}$ perpendicular?\n",
     "\n",
-    "### 3.2.1 Matrices\n",
+    "\n",
+    "### Exercise 3.3\n",
+    "\n",
+    "Compute the inner product for the vectors \n",
+    "\n",
+    "$$ \\ket{w} = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} i \\\\ 1 \\end{bmatrix} ; \\ket{z} = \\frac{1}{\\sqrt{3}} \\begin{bmatrix} \\sqrt{2} \\\\ i \\end{bmatrix}$$\n",
+    "\n",
+    "i. $\\braket{w|z}$\n",
+    "\n",
+    "ii. $\\braket{z|w}$\n",
+    "\n",
+    "iii. Bonus question: Compare i. ii. . Is the result the same as from Exercise 3.2 iv? \n",
+    "If not, what has changed?\n",
+    "\n",
+    "### 3.3.1 Matrices\n",
     "\n",
     "Another object, closely related to a vector, is a matrix. A matrix is just an array of numbers which you can perform a matrix product on. All the quantum gates will be represented as matrices, so understanding how they work will be essential for quantum computations. Matrices are usually denoted by capital letters, for example $M$\n",
     "\n",
@@ -152,7 +161,7 @@
     "\n",
     "$M$ has 4 elements: 1,2,3 & 4. \n",
     "\n",
-    "### 3.2.2 Matrix-vector product \n",
+    "### 3.3.2 Matrix-vector product \n",
     "\n",
     "As well as storing information, matrices can be used to transform vectors. This is done using the matrix-vector product. The matrix $M$ acting on the vector $\\ket{a}$ is denoted  as $M\\ket{a}$. The matrix multiplication is done by multiplying the corresponding elements of $M$ & $\\ket{a}$. Starting from the first row of $M$ we multiply out the elements of $M$ & $\\ket{a}$ starting from the left and add them up. Let's call the transformed vector $\\ket{a'}$. We can compute $\\ket{a'}$ by doing the matrix-vector product of $M$ on $\\ket{a}$ as\n",
     "\n",
@@ -175,7 +184,7 @@
     "\\ket{a'} = \\begin{bmatrix} 5 \\\\ 11 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "### 3.2.3 Inverse matrivces\n",
+    "### 3.3.3 Inverse matrivces\n",
     "\n",
     "For many matrix-vector products, we can go back and get the original vector from the transformed vector. This means, if we know the transformed vector $\\ket{a'}$ &  the matrix $M$ we can work out the original vector $\\ket{a}$. \n",
     "\n",
@@ -198,12 +207,12 @@
     "\n",
     "\n",
     "\n",
-    "### 3.2.4 Unitary matrices \n",
+    "### 3.3.4 Unitary matrices \n",
     "\n",
     "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. Conjugate means `\n",
     "\n",
     "\n",
-    "### Chapter 3.1 Summary \n",
+    "### Chapter 3 Part 2 Summary \n",
     "\n",
     "- Vectors are a collection of numbers stored in a row or column\n",
     "- Vectors can be added to each other or multiplied by a scalar\n",
