--- a/English Chapters/3.1_MM_Trigonometry_Complex.ipynb
+++ b/English Chapters/3.1_MM_Trigonometry_Complex.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Trigonometry \n",
+    "## 3.1 The mathematical minimum \n",
+    "\n",
+    "Whilst this work is not intended to be a textbook on mathematics, it is worth outlining the core maths essential to understanding quantum information. Beyond the scope of this course, there are a great many applications of the mathematics covered in this textbook. A much richer understanding of the physical world can be understood by applying these topics to the nature of light, itself quantum fundamentally, as well as machine learning and many fields of engineering. \n",
+    "\n",
+    "Readers with a more rigorous mathematical background may find this material rather basic but may still appreciate the explanations and relationships between the topics. \n",
+    "\n",
+    "The first part of this chapter will cover some trigonometry and complex numbers. \n",
+    "\n",
+    "## 3.1 Trigonometry \n",
     "\n",
     "Trigonometry is defined as \"*the branch of mathematics dealing with the relations of the sides and angles of triangles and with the relevant functions of any angles*\" but for our use it is much better to consider trigonometry the study of rotations. In later chapters, quantum gates will be described as rotations. \n",
     "\n",
@@ -13,7 +21,11 @@
     "![Unit_circle](Images\\TrigonometryUnitCircle_700.png)\n",
     "[2]\n",
     "\n",
-    "The triangle here is defined by the angle $\\theta$ with a base of length $cos(\\theta)$ & a height of $ sin(\\theta)$. Using Pythagoras theorem, usually stated as $ a^2 +b^2 = c^2$ where $c$ is the hypotenuse and $a,b$ are the remaining sides, one may easily derive the important equation: \n",
+    "The triangle here is defined by the angle $\\theta$ with a base of length $cos(\\theta)$ & a height of $ sin(\\theta)$. We can say the base is $ x = cos(\\theta)$ and the height is $ y = sin(\\theta)$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Using Pythagoras theorem, usually stated as $ a^2 +b^2 = c^2$ where $c$ is the hypotenuse and $a,b$ are the remaining sides, one may easily derive the important equation: \n",
     "\n",
     "$$ sin^2(\\theta) + cos^2(\\theta) = 1 $$\n",
     "\n",
@@ -27,11 +39,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Beyond real numbers\n",
+    "## 3.2 Beyond real numbers\n",
     "\n",
     "So far everything in this textbook has been described using *real* numbers- that is the set numbers you can produce on most calculators. For quantum computing, we require going beyond to complex numbers. \n",
     "\n",
-    "### 3.4.1 The square root of -1 \n",
+    "### 3.2.1 The square root of -1 \n",
     "\n",
     "There are two square roots of $4$: $+2$ & $-2$. For numbers that aren't integers there are algorithms we can run on our calculators to work out the roots to arbitrary precision. In physics there are many situations in which the only valid solution to a particular equation calls for the square root of a negative number. To make this work, it is necessary to first define the square root of $-1$ as $i = \\sqrt{-1}$. \n",
     "\n",
@@ -43,7 +55,7 @@
     "For example the square root of $-4$ can be written as $+2i$, $-2i$.\n",
     "These numbers that can be written as $ai$ are known as imaginary numbers. \n",
     "\n",
-    "### 3.4.2 Complex numbers \n",
+    "### 3.2.2 Complex numbers \n",
     "\n",
     "Imaginary numbers work similarly to the real numbers everyone uses on a  daily basis. One can divide, multiply, add & subtract them just as you can for real numbers. What this also means is that any of $ \\div ,\\times, +, - $ operations can be applied to a combination of both real and imaginary numbers. For instance, the positive root of $-4$, $2i$ can be added to $3$ as $3 + 2i $. Any such number that can be written as a sum of a real and imaginary number is called a *complex number*. More generally we can define this mathematically as:\n",
     "\n",
@@ -51,16 +63,34 @@
     "\n",
     "Where $a$ and $b$ are purely real numbers. The real part of $z$ is known as $ Re(z) = a$ and similarly the imaginary component of is $ Im(z) = b$. \n",
     "\n",
-    "### 3.4.3 The Argand Diagram\n",
+    "### 3.2.3 The Argand Diagram\n",
     "\n",
     "Complex numbers can be represented on a graph by splitting them into their real & imaginary parts. In the Argand diagram the x axis represents the real part and the y axis represents the imaginary part. \n",
     "\n",
     "![Argand_plane](Images\\A_plus_bi.svg)\n",
     "\n",
-    "If a were negative, the real part would be negative so the arrow would point to the left instead. \n",
+    "If a were negative, the real part would be negative so the arrow would point to the left instead. If b were negative, the imaginary part would be negative, so the arrow would point downwards instead. \n",
     "\n",
     "\n",
-    "### 3.4.4 Complex conjugate\n",
+    "### Exercise 3.1\n",
+    "\n",
+    "Consider the complex numbers \n",
+    "\n",
+    "z = 4 + 5i \n",
+    "\n",
+    "y = -3 + i \n",
+    "\n",
+    "m = -2 - 2i \n",
+    "\n",
+    "\n",
+    "i.What is $Re(z)$?\n",
+    "\n",
+    "ii. What is $Im(m)$? \n",
+    "\n",
+    "ii. Sketch z,y,m on the Argand diagram\n",
+    "\n",
+    "\n",
+    "### 3.2.4 Complex conjugate\n",
     "\n",
     "\n",
     "Every complex number has a real & imaginary part. By taking the imaginary part of the complex number and making it negative, we get the complex conjugate. For example if the complex number $z$ is \n",
@@ -78,7 +108,7 @@
     "\n",
     " Note how the real part is the same, but the imaginary part is on the negative axis. \n",
     "\n",
-    " ### 3.4.5 Magnitude of complex numbers \n",
+    " ### 3.2.5 Magnitude of complex numbers \n",
     "\n",
     " It can be very useful to describe how big a complex number is. Since it has a real component and an imaginary component, the magnitude of a complex number indicates how big it is across both these components. \n",
     "\n",
@@ -92,50 +122,81 @@
     "\n",
     " The magnitude of a complex number is important for figuring out the probability of getting a particular output from a quantum computation. \n",
     "\n",
-    "### 3.4.5 Euler's formula\n",
+    " ### Exercise 3.2 \n",
+    "\n",
+    " Consider the complex number $z = 3 + 5i$ . \n",
+    "\n",
+    " i. What is the complex conjugate of $z$, $z^*$?\n",
+    " ii. What is the magnitude of $z$?\n",
+    "  \n",
+    "\n",
+    "### 3.2.5 Euler's formula\n",
     "\n",
     "Without going through all the steps of explaining where it came from, *Euler's formula* can be stated as:\n",
     "\n",
     "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
     "\n",
-    "The significance of this is that one can represent any complex number in this fashion simply by multiplying the left-hand side by some magnitude. In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
+    "Where $\\theta$ is an angle in radians. \n",
+    "\n",
+    "The significance of this is that one can represent any complex number in this fashion simply by multiplying the left-hand side by some magnitude. \n",
+    "\n",
+    "For example, the complex number $ z = \\frac{1}{2}( 1 + \\sqrt{3}i)$ \n",
+    "\n",
+    "Can be written as \n",
+    "\n",
+    "$$ z = cos(\\pi/3) + i sin(\\pi/3) $$\n",
+    "\n",
+    "With Euler's formula this becomes \n",
+    "\n",
+    "$$ z = e^{i \\pi/3} $$\n",
     "\n",
     "\n",
-    "### 3.4.6 Polar form of complex numbers \n",
+    "In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
+    "\n",
+    "\n",
+    "### 3.2.6 Polar form of complex numbers \n",
     "\n",
     "\n",
     "We can represent any complex number on the Argand diagram in terms of its real and imaginary parts. From trigonometry, we can also represent any point on a circle using an angle and a given radius. \n",
     "\n",
     "Euler's formula allows us to put these two together, representing any complex number as a point on a circle. \n",
     "\n",
+    "There are some complex numbers that are too big to be written as $e^{i\\theta}$. For instance, the complex number z = 5 + 12i cannot be written as $cos(\\theta)$ because $cos(\\theta)$ only goes up to 1. To overcome this, we can multiply by some magnitude to allow for bigger numbers. By multiplying by 13 we can write \n",
+    "\n",
+    "$$ z = 13(cos(1.176) + i sin(1.176) )= 5 + 12i $$\n",
+    "\n",
+    "$$ z = 13e^{i 1.176}$$\n",
+    "\n",
+    "Where did the 13 come from? \n",
+    "\n",
+    "The factor in front of the $e$ is the magnitude of the complex number. This is the same magnitude described in 3.2.5. This is found by taking the norm of the real and complex part \n",
+    "\n",
+    "$$ 13 = \\sqrt{ 5^2 + 12^2} $$\n",
+    "\n",
+    "\n",
     "Using Euler's formula, any complex number can be written in terms of its magnitude and an angle. This gives us \n",
     "\n",
     "$$z = x + iy = re^{i\\theta}$$ \n",
     "\n",
     "\n",
-    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane\n"
+    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane\n",
+    "\n",
+    "\n",
+    "[INSERT IMAGE HERE]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5 Probability \n",
-    "\n",
-    "The world is an uncertain place, it always has been and always will be. \n",
-    "\n",
-    "Fortunately it is possible to make predictions about events which may happen in the future and thus to make plans accordingly. In some cases how likely an event is can be quantified by a probability. This can be given as a probability, for instance a 40% chance of rain, a fraction, for example a 1/2 chance of throwing a heads, or a decimal (less commonly used in conversation). In any case, when the probabilities for all possible outcomes are added up correctly they sum to 100% or 1. \n",
-    "\n",
-    "Quantum computing is inherently a method of manipulating probabilities in a very particular way. \n",
-    "\n",
-    "## Chapter 3.2 Summary \n",
+    "## Chapter 3 Part 1 Summary \n",
     "\n",
     "- Any point on the unit circle can be described by \n",
     "- Imaginary numbers are a multiple of $\\sqrt{-1} = i $\n",
     "- Complex numbers have a real and imaginary part \n",
     "- Every complex number has a complex conjugate which has the negative imaginary part\n",
     "- The magnitude of a complex number is the Euclidean norm of its real and imaginary components\n",
-    "- Euler's formula relates complex numbers to trigonometric functions "
+    "- Euler's formula allows any complex number to be written as $z = re^{i\\theta}$"
    ]
   },
   {
@@ -155,19 +216,29 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dba8851dec06c95965c4b9acd8f4325acdb80444c005ae414d7a6bcd36173821"
-  },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7d8cf412c429d163f0ec8962de5d99a5f7520d1b1380235674c38dc96da666cc"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
