--- a/English Chapters/3.2_MM_Linear_algebra.ipynb
+++ b/English Chapters/3.2_MM_Linear_algebra.ipynb
@@ -206,10 +206,35 @@
     "\n",
     "\n",
     "\n",
+    "Before we had $\\ket{a'} = M\\ket{a}$. And now we would like to go backwards from $\\ket{a'}$ to $\\ket{a}$. This is done using the inverse of $M$: $M^{-1}$\n",
+    "\n",
+    "$$\n",
+    " M^{-1}\\ket{a'} = \\ket{a} \n",
+    "$$\n",
+    "\n",
+    "Notice how we can take the original equation and do the matrix multiplication by $M^{-1}$ and get the same result\n",
+    "\n",
+    "$$\n",
+    "M^{-1}\\ket{a'} = M^{-1}M\\ket{a} = \\ket{a}\n",
+    "$$\n",
+    "\n",
+    "$M^{-1}$ is cancelling out $M$ so that there is no effect on $\\ket{a}$. The matrix that represents this \"no effect\" is called the idenity $I$ defined by \n",
+    "\n",
+    "\n",
+    "$$ I\\ket{v} = \\ket{v}$$\n",
+    "\n",
+    "This gives us the important relation \n",
+    "\n",
+    "\n",
+    "$$ M^{-1}M = MM^{-1} = I $$\n",
     "\n",
     "### 3.3.4 Unitary matrices \n",
     "\n",
     "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. Conjugate means `\n",
+    "\n",
+    "The conjugate transpose is the same process as it is to turn a ket (column vector) into a bra (row vector). Take You swap the rows and the columns and then replace every imaginary number with the negative version. \n",
+    "\n",
+    "For example, the \n",
     "\n",
     "\n",
     "### Chapter 3 Part 2 Summary \n",
@@ -221,7 +246,7 @@
     "- Matrices are arrays of numbers that can act on vectors \n",
     "- Applying a matrix to a vector turns the vector into another vector\n",
     "- Matrices can have an inverse which does the reverse of the matrix \n",
-    "- Unitary matrices have an inverse equal to their complex transpose\n"
+    "- Unitary matrices have an inverse equal to their conjugate transpose\n"
    ]
   }
  ],
