Improved readability of graphs

--- a/English Chapters/11_Shor.ipynb
+++ b/English Chapters/11_Shor.ipynb
@@ -6,12 +6,18 @@
    "source": [
     "## Shor's Algorithm \n",
     "\n",
-    "Probably the most famous quantum algorithm, Shor's algorithm is an example of a quantum algorithm *exponentially* faster than the best classical algorithm. "
+    "Probably the most famous quantum algorithm, Shor's algorithm is an example of a quantum algorithm *exponentially* faster than the best classical algorithm. \n",
+    "\n",
+    "In addition to being fast, Shor's algorithm has immense practical utility. \n",
+    "\n",
+    "## Decrypting encryption \n",
+    "\n",
+    "## Y2Q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,6 +30,8 @@
    ],
    "source": [
     "#Shor's\n",
+    "\n",
+    "# TODO: Make this more readable on laptops\n",
     "\n",
     "import numpy as np\n",
     "from numpy import * #Use with caution as this causes packages to mess with each other\n",
@@ -47,18 +55,15 @@
     "\n",
     "# Create the figure and the line that we will manipulate\n",
     "fig, ax = plt.subplots()\n",
-    "line, = plt.plot(x, f(x, a), lw=5, label = 'Quantum factorisation')\n",
+    "line, = plt.plot(x, f(x, a), label = 'Quantum factorisation')\n",
     "g = np.exp(x**1/3)\n",
-    "plt.plot(x,g,lw = 5, label = 'Classical Factorisation' )\n",
-    "ax.set_xlabel('Size of problem', fontsize = 24)\n",
-    "ax.set_ylabel('Time taken to solve', fontsize = 24)\n",
+    "plt.plot(x,g, label = 'Classical Factorisation' )\n",
+    "ax.set_xlabel('Size of problem')\n",
+    "ax.set_ylabel('Time taken to solve')\n",
     "ax.set_yscale('log')\n",
-    "ax.set_title(\"Shor's Factoring Algorithm\", fontsize = 36)\n",
-    "matplotlib.pyplot.xticks(fontsize=22)\n",
-    "matplotlib.pyplot.yticks(fontsize=22)\n",
+    "ax.set_title(\"Shor's Factoring Algorithm\")\n",
     "\n",
     "\n",
-    "plt.legend(fontsize = 20)\n",
     "# adjust the main plot to make room for the sliders\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "\n",
@@ -71,8 +76,6 @@
     "    valmax= 1,\n",
     "    valinit=0.1,\n",
     ")\n",
-    "\n",
-    "\n",
     "\n",
     "# The function to be called anytime a slider's value changes\n",
     "def update(val):\n",
@@ -97,11 +100,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -115,9 +115,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "7d8cf412c429d163f0ec8962de5d99a5f7520d1b1380235674c38dc96da666cc"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
